# cs5782-final-project

./: .envrc  .gitignore  Dockerfile.test  LICENSE  Makefile  README.md  flake.nix  prek.toml  project-proposal.typ  pyproject.toml  run_docker_tests.sh  run_tests.sh
.github/workflows/: ci.yml
analysis/: __init__.py  analyze_dora_lora.py
code/configs/experiments/: debug_quick.toml  default.toml  paper_colab.toml  paper_llama2_7b.toml
code/configs/models/: llama2_7b.toml  llama3_8b.toml  tiny_debug.toml
code/configs/runtime/: colab_a100_40gb_llama.toml  colab_a100_80gb_llama.toml  colab_l4_a100.toml  colab_l4_llama.toml  colab_t4.toml  colab_t4_llama.toml  official.toml
code/notebooks/: colab_quickstart.ipynb
code/scripts/: __init__.py  analyze_dora_lora.py
code/src/dora_repro/: __init__.py  adapter_base.py  adapters.py  assets.py  auth.py  cli.py  config.py  data.py  dora.py  eval.py  logging_utils.py  lora.py  prompts.py  results.py  train.py
code/tests/: test_adapters.py  test_adapters_quantized.py  test_assets.py  test_auth.py  test_cli.py  test_config.py  test_data.py  test_dora.py  test_eval.py  test_logging_utils.py  test_lora.py  test_prompts.py  test_results.py  test_train.py
data/: README.md
data/benchmarks/: ARC-Challenge.jsonl  ARC-Easy.jsonl  boolq.jsonl  openbookqa.jsonl  piqa.jsonl  social_i_qa.jsonl  winogrande.jsonl
notebooks/: bootstrap_colab.sh  colab_quickstart.ipynb
poster/: Makefile  README.md  beamercolorthemegemini.sty  beamerthemegemini.sty  latexmkrc  main.tex  poster-content.md  refs.bib  spider_charts.tex  spider_dora.tex  spider_export.py
proposal/: project-proposal.typ
report/: README.md  charged-ieee.typ  refs.bib  report.typ
results/: README.md  benchmark_summary_rank.csv  official_reference_comparison.csv  summary_table.csv  task_summary.csv
results/analysis/: dora_gains_table.csv  official_reference_comparison.csv  scope_summary.csv
